# serene-audio-mode

./: .gitignore  README  README.md  USAGE  hello.py  pyproject.toml  serene.py  serene2.py  serene_video.py
serene/: __init__.py
serene-audio-mode/: cli_dev.py
serene-audio-mode/serene/: __init__.py  file_formats.py  serene_video.py
serene_audio_mode/: cli.py  cli_dev.py
serene_audio_mode/formats/: __init__.py
serene_audio_mode/serene/: band_filters.py  rms.py
