[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serene-audio-mode"
version = "0.1.0"
authors = [
    { name = "dimasaur", email = "d@borzov.ca" },
]
description = "Rebalances audio for clarity of dialog, less jarring sounds."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL" }  
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",         
    "Operating System :: Microsoft :: Windows",  
]
dependencies = [
    "numpy",
    "ffmpeg-python",
    "soundfile",
]

[project.urls]
"Homepage" = "https://github.com/dborzov/serene-audio-mode"
"Bug Tracker" = "https://github.com/dborzov/serene-audio-mode/issues"

[project.scripts]
serene-audio-mode = "serene_audio_mode.cli:main"
serene-audio-mode-dev = "serene_audio_mode.cli_dev:main"

[tool.hatch.build.targets.wheel]
packages = ["serene_audio_mode"]

[tool.pytest.ini_options]
addopts = "-v -rA --color=yes"
pythonpath = [
  "."
]
testpaths = [
    "serene_audio_mode/tests",
]

[tool.uv]
lock = "uv.lock"

